--- a/src/Styles/reset.css
+++ b/src/Styles/reset.css
@@ -5,6 +5,9 @@
   }
   
   body {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    justify-content: space-between;
   }
