--- a/src/components/common/Footer/Footer.module.css
+++ b/src/components/common/Footer/Footer.module.css
@@ -1,6 +1,135 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+.container {
+  width: 100%;
+}
+
 .footer {
+  width: 100%;
+  height: 250px;
   display: flex;
   flex-direction: row;
-  align-items: baseline;
-  width: 100%;
+  justify-content: space-around;
+  background-color: #1e2824;
+  color: #f2f2f2;
+  padding: 20px;
+}
+
+.footer > div {
+  width: 25%;
+  height: 100%;
+  align-items: center;
+  list-style: none;
+}
+
+.taberna {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: linear-gradient(to bottom, #5d3c18 0%, #766b65 100%);
+  border: 2px solid #5d3c18;
+  border-radius: 20px 0px 20px 0px;
+}
+
+.taberna > img {
+  width: 250px;
+}
+
+.infos {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid #5d3c18;
+  border-radius: 10px;
+  font-family: 'Poppins', sans-serif;
+  text-align: left;
+}
+
+.contato {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 10px;
+  height: 40px;
+}
+
+.social {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 50px;
+  gap: 10px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.redesSociais {
+  display: flex;
+  width: 60%;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.pay {
+  display: flex;
+  width: 70%;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.pay > img {
+  width: 30px;
+}
+
+.alert {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.alert > h3 {
+  border: 2px solid #006CD8;
+  border-radius: 20px 0px 20px 0px;
+  padding: 30px;
+  background-color: #006CD8;
+  font-family: 'Poppins', sans-serif;
+}
+
+.button {
+  width: 160px;
+  height: 40px;
+  color: #ffffff;
+  text-align: center;
+  background-image: linear-gradient(to bottom, #5d3c18 0%, #766b65 100%);
+  background-clip: padding-box;
+  border-radius: 5px;
+  font-size: 20px;
+  border: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+.button:hover {
+  transform: scale(1.1);
+  transition: all 0.5s;
+}
+
+.input {
+  top: 441px;
+  left: 870px;
+  width: 340px;
+  height: 30px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  opacity: 1;
+  font-family: 'Poppins', sans-serif;
+}
+
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border: 1px solid #5d3c18;
+  border-radius: 10px;
+  padding: 20px;
+  font-family: 'Poppins', sans-serif;
 }
