--- a/src/components/common/Header/Header.module.css
+++ b/src/components/common/Header/Header.module.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
+
 .header {
-    height: 70px;
-    background-color: #f6eada;
+    height: 20vh;
+    background-color: #F6EBDA;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -9,11 +11,20 @@
 .nav {
     display: flex;
     flex-direction: row;
+    width: 80%;
     gap: 20px;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    font-family: 'MedievalSharp', cursive;
+}
+
+.nav > img {
+    width: 250px;
 }
 
 .link {
     text-decoration: none;
+    font-weight: bold;
+    font-size: 25px;
+    color: #230000;
 }
