--- a/src/components/common/Footer/Footer.module.css
+++ b/src/components/common/Footer/Footer.module.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: linear-gradient(to bottom, #5d3c18 0%, #766b65 100%);
+  background-image: linear-gradient(to bottom, #F6EBDA 0%, #766b65 100%);
   border: 2px solid #5d3c18;
   border-radius: 20px 0px 20px 0px;
 }
@@ -120,6 +120,7 @@
   height: 30px;
   background: #ffffff 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
+  border-radius: 5px;
   opacity: 1;
   font-family: 'Poppins', sans-serif;
 }
