--- a/src/components/common/Footer/Footer.module.css
+++ b/src/components/common/Footer/Footer.module.css
@@ -121,6 +121,7 @@
   background: #ffffff 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
   border-radius: 5px;
+  padding: 10px;
   opacity: 1;
   font-family: 'Poppins', sans-serif;
 }
