--- a/src/components/common/Header/Header.module.css
+++ b/src/components/common/Header/Header.module.css
@@ -28,3 +28,24 @@
     font-size: 25px;
     color: #230000;
 }
+
+.link:hover {
+    transform: scale(1.1);
+    transition: all 0.5s;
+  }
+
+.linkLogin {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 25px;
+    color: #f2f2f2;
+    border: 1px solid #230000;
+    padding: 5px;
+    border-radius: 10px 0px 10px 0px;
+    background-image: linear-gradient(to bottom, #5d3c18 0%, #766b65 100%);
+}
+
+.linkLogin:hover {
+    transform: scale(1.1);
+    transition: all 0.5s;
+  }
