--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -42,6 +42,26 @@
   height: 20px;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  width: 100%;
+}
+
+.divProdutos {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  background-color: #5d3c18;
+  margin-bottom: 2px;
+}
+
 .divBtns {
   width: 100%;
   display: flex;
