--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
 .container {
-    height: 100vh;
     background: linear-gradient(to left, #0D060F 0%, #766B65 100%);
 }
 
@@ -36,7 +35,7 @@
 }
 
 .cor {
-    color: #5D3C18;
+    color: #EF761E;
 }
 
 .button {
@@ -67,14 +66,39 @@
 }
 
 .conteudo2 {
-    height: 40vh;
+    height: 60vh;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #766B65;
 }
 
 .conteudo2 > img {
-    width: 480px;
+    height: 100%;
+}
+
+.descBeer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 40%;
+    background-color: #F6EBDA;
+    height: 80%;
+    text-align: justify;
+    font-size: 30px;
+    border: 1px solid #5D3C18;
+    border-radius: 10px;
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.descBeer > h2 {
+    font-family: 'MedievalSharp', cursive;
+}
+
+.icones {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
