--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -65,6 +65,14 @@
     align-items: center;
 }
 
+.sectionCards {
+    height: 40vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .conteudo2 {
     height: 60vh;
     display: flex;
