--- a/src/components/CardPedido/CardPedido.module.css
+++ b/src/components/CardPedido/CardPedido.module.css
@@ -1,19 +1,21 @@
 .pedidos {
   min-height: 72vh;
   min-width: 50%;
-  margin-right: 30px;
-  background-color: #1e2824;
+  margin: 30px;
+  background-color: #766b65;
   text-align: center;
   border: 1px solid #5d3c18;
   border-radius: 10px;
-  color: #f7f7f7;
+  color: #230000;
+  display: grid;
+  justify-items: center;
+  align-content: center;
 }
 
 .divCard {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 10px;
   margin-bottom: 10px;
   border: 1px solid #5d3c18;
   border-radius: 10px;
