--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,34 +1,42 @@
 .formPost {
   display: flex;
+  width: 40%;
+  flex-direction: column;
   justify-content: center;
-  margin: 30px 0;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  padding: 2rem;
+  margin: 5rem;
+  border-radius: 1rem;
+  font-size: 1rem;
+  background-color: burlywood;
 }
 
 .formPost form {
-  width: 20%;
-  background-color: #f2f2f2;
-  border-radius: 20px;
-  padding: 36px 64px;
-  box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
-}
-
-.formPost label {
-  display: block;
-  margin-bottom: 25px;
-  font-size: 15px;
-  font-weight: 400;
-}
-.formPost input {
-  background-color: #fff;
-  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
-  width: 50%;
-  font-size: 12px;
-  padding: 12px;
-  box-sizing: border-box;
-  border: none;
-}
-
-.btnPost {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+
+.formPost input {
+  height: 2rem;
+  width: 20rem;
+}
+
+.formPost button {
+  height: 2.2rem;
+  width: 5rem;
+  color: black;
+}
+
+.formPost button:hover {
+  scale: 1.1;
+  cursor: pointer;
+}
+
+.formPost fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
 }
