--- a/src/pages/Cardapio/Cardapio.module.css
+++ b/src/pages/Cardapio/Cardapio.module.css
@@ -23,8 +23,10 @@
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: repeat(4, 1fr);
-  grid-column: span 4;
-  align-items: flex-end;
+  grid-column: span 3;
+  justify-content: flex-end;
+  align-items: center;
+  align-items: center;
   gap: 5rem;
 }
 
