--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -72,12 +72,6 @@
     border-radius: 50%;
 }
 
-.circulo > h2 {
-    color: #f2f2f2;
-    position: absolute;
-    font-family: 'Poppins', sans-serif;
-}
-
 .sectionCards {
     height: 60vh;
     display: flex;
@@ -101,7 +95,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     width: 70%;
     gap: 40px;
     text-align: justify;
