--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -35,6 +35,16 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
+}
+
+.div100 input {
+  width: 5rem;
+  height: 2rem;
+  margin: 3px;
+  border: none;
+  border-radius: 3px;
+  text-align: center;
 }
 
 .divFecha {
