feat: ajustes finais na página cardápio

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -9,7 +9,7 @@
   margin: 5rem;
   border-radius: 1rem;
   font-size: 1rem;
-  background-color: burlywood;
+  background-color: #dad7cd;
 }
 
 .formPost form {
