--- a/src/pages/Cardapio/Cardapio.module.css
+++ b/src/pages/Cardapio/Cardapio.module.css
@@ -59,6 +59,7 @@
   width: 180px;
   height: 40px;
   color: #f2f2f2;
+  grid-column: span 1;
   margin-top: 2rem;
   text-align: center;
   background-image: linear-gradient(to bottom, #1e2824 0%, #766b65 100%);
