fix: ajuste de submit de post

--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -53,3 +53,22 @@
   display: flex;
   gap: 2rem;
 }
+
+.btnPost > input {
+  margin-left: 2rem;
+  width: 100px;
+  height: 40px;
+  color: #f2f2f2;
+  margin-top: 1rem;
+  text-align: center;
+  background-image: linear-gradient(to bottom, #1e2824 0%, #766b65 100%);
+  border-radius: 15px;
+  font-size: 15px;
+  border: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+.btnPost > input:hover {
+  scale: 1.1;
+  cursor: pointer;
+}
