--- a/src/components/FormUpdate/FormUp.module.css
+++ b/src/components/FormUpdate/FormUp.module.css
@@ -39,7 +39,7 @@
 }
 
 .formPost input {
-  height: 2rem;
+  height: 2.5rem;
   width: 20rem;
   background-color: white;
 }
@@ -53,4 +53,23 @@
 .btnPost {
   display: flex;
   gap: 2rem;
+}
+
+.btnPost input {
+  margin-left: 2rem;
+  width: 100px;
+  height: 40px;
+  color: #f2f2f2;
+  margin-top: 1rem;
+  text-align: center;
+  background-image: linear-gradient(to bottom, #1e2824 0%, #766b65 100%);
+  border-radius: 15px;
+  font-size: 15px;
+  border: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+.btnPost input:hover {
+  scale: 1.1;
+  cursor: pointer;
 }
