--- a/src/components/common/Footer/Footer.module.css
+++ b/src/components/common/Footer/Footer.module.css
@@ -139,3 +139,79 @@
   padding: 20px;
   font-family: 'Poppins', sans-serif;
 }
+
+@media screen and (max-width: 1366px) {
+  .footer {
+    padding: 10px;
+    height: 300px;
+  }
+  
+  .footer > div {
+    width: 20%;
+    height: 100%;
+  }
+  
+  .infos {
+    text-align: center;
+    font-size: 15px;
+    gap: 0px;
+  }
+  
+  .contato {
+    flex-direction: column;
+    align-items: center;
+    height: 60px;
+    gap: 0px;
+  }
+  
+  .social {
+    justify-content: center;
+    padding-bottom: 0px;
+  }
+  
+  .redesSociais {
+    width: 70%;
+  }
+  
+  .pay {
+    width: 80%;
+  }
+  
+  .alert > h3 {
+    padding: 20px;
+    width: 200px;
+  }
+  
+  .input {
+    width: 240px;
+  }
+  
+  .newsletter {
+    gap: 20px;
+    height: 80%;
+    justify-content: center;
+    margin-top: 30px;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .footer > div {
+    width: 80%;
+    height: 100%;
+  }
+  
+  .taberna > img {
+    width: 200px;
+  }
+  .newsletter {
+    align-items: center;
+  }
+}
