--- a/src/components/common/Loader/Loader.module.css
+++ b/src/components/common/Loader/Loader.module.css
@@ -59,3 +59,15 @@
     }
     
 }
+
+@media screen and (max-width: 1366px) {
+    .loader {
+        padding: 50px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .loader {
+        padding: 50px;
+    }
+}
