--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -141,3 +141,125 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+@media screen and (max-width: 1366px) {
+    .conteudo {
+        height: 70vh;
+    }
+    
+    .title {
+        width: 40%;
+        height: 80%;
+    }
+    
+    .sectionCards {
+        height: 90vh;
+    }
+    
+    .tituloCards {
+        width: 80%;
+    }
+    
+    .cards {
+        height: 70vh;
+        width: 85%;
+        gap: 10px;
+        border-radius: 20px;
+    }
+    
+    .conteudo2 {
+        height: 70vh;
+        justify-content: space-evenly;
+    }
+    
+    .conteudo2 > img {
+        height: 100%;
+    }
+    
+    .descBeer {
+        width: 40%;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .conteudo {
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-bottom: 10px;
+    }
+    
+    .title {
+        width: 50%;
+        height: 60%;
+        flex-direction: column;
+        gap: 5px;
+        
+    }
+    
+    .title > h1 {
+        font-size: 50px;
+        padding-top: 10px;
+        text-align: center;
+    }
+    
+    .title > p {
+        font-size: 20px;
+        text-align: center;
+    }
+    
+    .circulo {
+        width: 350px;
+        height: 350px;
+    }
+    
+    .circulo > img {
+        width: 300px;
+        height: 300px;
+    }
+    
+    .sectionCards {
+        height: 150vh;
+    }
+    
+    .tituloCards {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 80%;
+    }
+    
+    .cards {
+        height: 130vh;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+        text-align: center;
+    }
+    
+    .conteudo2 {
+        height: 90vh;
+        flex-direction: column;
+        justify-content: space-around;
+        padding-bottom: 20px;
+    }
+    
+    .conteudo2 > img {
+        width: 80%;
+    }
+    
+    .descBeer {
+        width: 80%;
+        height: 90%;
+        text-align: center;
+        padding: 5px;
+    }
+    
+    .descBeer > h2 {
+        text-align: center;
+        font-size: 25px;
+    }
+
+}
